--- a/lorena.html
+++ b/lorena.html
@@ -58,7 +58,7 @@ audio.volume = .5;
     <div class="colelem" id="u56595"><!-- content --></div>
    </div>
    <div class="clearfix grpelem" id="u3787-5"><!-- content -->
-    <p><a class="nonblock" href="index.html#home">+ center +</a></p>
+    <p><span>+ center +</span></p>
    </div>
    <div class="size_fixed grpelem" id="u3796"><!-- custom html -->
    </div>
