--- a/manifesto.html
+++ b/manifesto.html
@@ -15,7 +15,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   
   <title>Manifesto</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4217872932"/>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=312001045"/>
   <link rel="stylesheet" type="text/css" href="css/manifesto.css?crc=4173937066" id="pagesheet"/>
     <!--/*
 
@@ -67,7 +67,7 @@ audio.volume = .5;
     <div class="colelem" id="u59031"><!-- content --></div>
    </div>
    <div class="clearfix grpelem" id="u3610-5"><!-- content -->
-    <p><a class="nonblock" href="index.html#home">+ center +</a></p>
+    <p><span>+ center +</span></p>
    </div>
    <div class="size_fixed grpelem" id="u3567"><!-- custom html -->
    </div>
