--- a/tiago2.html
+++ b/tiago2.html
@@ -172,45 +172,45 @@ Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
-$('#u55291').registerOpacityScrollEffect([{"in":[-Infinity,-100.04],"opacity":0,"fade":50},{"opacity":100,"in":[-100.04,-100.04]},{"in":[-100.04,Infinity],"opacity":100,"fade":50}]);/* scroll effect */
-$('#u55320').registerOpacityScrollEffect([{"in":[-Infinity,115.4],"opacity":0,"fade":50},{"opacity":100,"in":[115.4,115.4]},{"in":[115.4,Infinity],"opacity":100,"fade":50}]);/* scroll effect */
-$('#u55031-4').registerOpacityScrollEffect([{"in":[-Infinity,-5.09],"opacity":0,"fade":50},{"opacity":100,"in":[-5.09,-5.09]},{"in":[-5.09,Infinity],"opacity":100,"fade":50}]);/* scroll effect */
-$('#u55034-4').registerOpacityScrollEffect([{"in":[-Infinity,104.91],"opacity":0,"fade":50},{"opacity":100,"in":[104.91,104.91]},{"in":[104.91,Infinity],"opacity":100,"fade":50}]);/* scroll effect */
-$('#u55037-4').registerOpacityScrollEffect([{"in":[-Infinity,384.91],"opacity":0,"fade":50},{"opacity":100,"in":[384.91,384.91]},{"in":[384.91,Infinity],"opacity":100,"fade":50}]);/* scroll effect */
-$('#u55040-6').registerOpacityScrollEffect([{"in":[-Infinity,670.91],"opacity":0,"fade":50},{"opacity":100,"in":[670.91,670.91]},{"in":[670.91,Infinity],"opacity":100,"fade":50}]);/* scroll effect */
-$('#u55043-4').registerOpacityScrollEffect([{"in":[-Infinity,1009.91],"opacity":0,"fade":50},{"opacity":100,"in":[1009.91,1009.91]},{"in":[1009.91,Infinity],"opacity":100,"fade":50}]);/* scroll effect */
-$('#u55046-6').registerOpacityScrollEffect([{"in":[-Infinity,1382.91],"opacity":0,"fade":50},{"opacity":100,"in":[1382.91,1382.91]},{"in":[1382.91,Infinity],"opacity":100,"fade":50}]);/* scroll effect */
-$('#u55049-4').registerOpacityScrollEffect([{"in":[-Infinity,1670.81],"opacity":0,"fade":50},{"opacity":100,"in":[1670.81,1670.81]},{"in":[1670.81,Infinity],"opacity":100,"fade":50}]);/* scroll effect */
-$('#u55052-8').registerOpacityScrollEffect([{"in":[-Infinity,1994.71],"opacity":0,"fade":50},{"opacity":100,"in":[1994.71,1994.71]},{"in":[1994.71,Infinity],"opacity":100,"fade":50}]);/* scroll effect */
-$('#u55055-4').registerOpacityScrollEffect([{"in":[-Infinity,2488.56],"opacity":0,"fade":50},{"opacity":100,"in":[2488.56,2488.56]},{"in":[2488.56,Infinity],"opacity":100,"fade":50}]);/* scroll effect */
-$('#u55058-10').registerOpacityScrollEffect([{"in":[-Infinity,2817.96],"opacity":0,"fade":50},{"opacity":100,"in":[2817.96,2817.96]},{"in":[2817.96,Infinity],"opacity":100,"fade":50}]);/* scroll effect */
-$('#u55072-4').registerOpacityScrollEffect([{"in":[-Infinity,3655.26],"opacity":0,"fade":50},{"opacity":100,"in":[3655.26,3655.26]},{"in":[3655.26,Infinity],"opacity":100,"fade":50}]);/* scroll effect */
-$('#u55075-4').registerOpacityScrollEffect([{"in":[-Infinity,4048.86],"opacity":0,"fade":50},{"opacity":100,"in":[4048.86,4048.86]},{"in":[4048.86,Infinity],"opacity":100,"fade":50}]);/* scroll effect */
-$('#u55078-6').registerOpacityScrollEffect([{"in":[-Infinity,4490.86],"opacity":0,"fade":50},{"opacity":100,"in":[4490.86,4490.86]},{"in":[4490.86,Infinity],"opacity":100,"fade":50}]);/* scroll effect */
-$('#u55081-4').registerOpacityScrollEffect([{"in":[-Infinity,4768.86],"opacity":0,"fade":50},{"opacity":100,"in":[4768.86,4768.86]},{"in":[4768.86,Infinity],"opacity":100,"fade":50}]);/* scroll effect */
-$('#u55084-6').registerOpacityScrollEffect([{"in":[-Infinity,5037.81],"opacity":0,"fade":50},{"opacity":100,"in":[5037.81,5037.81]},{"in":[5037.81,Infinity],"opacity":100,"fade":50}]);/* scroll effect */
-$('#u55087-4').registerOpacityScrollEffect([{"in":[-Infinity,5761.41],"opacity":0,"fade":50},{"opacity":100,"in":[5761.41,5761.41]},{"in":[5761.41,Infinity],"opacity":100,"fade":50}]);/* scroll effect */
-$('#u55093-4').registerOpacityScrollEffect([{"in":[-Infinity,5436.46],"opacity":0,"fade":50},{"opacity":100,"in":[5436.46,5436.46]},{"in":[5436.46,Infinity],"opacity":100,"fade":50}]);/* scroll effect */
-$('#u56823').registerOpacityScrollEffect([{"in":[-Infinity,3241.15],"opacity":0,"fade":50},{"opacity":100,"in":[3241.15,3241.15]},{"in":[3241.15,Infinity],"opacity":100,"fade":50}]);/* scroll effect */
-$('#u55139').registerOpacityScrollEffect([{"in":[-Infinity,3241.1],"opacity":0,"fade":50},{"opacity":100,"in":[3241.1,3241.1]},{"in":[3241.1,Infinity],"opacity":100,"fade":50}]);/* scroll effect */
-$('#u55262').registerOpacityScrollEffect([{"in":[-Infinity,1547.5],"opacity":0,"fade":50},{"opacity":100,"in":[1547.5,1547.5]},{"in":[1547.5,Infinity],"opacity":100,"fade":50}]);/* scroll effect */
-$('#u55333').registerOpacityScrollEffect([{"in":[-Infinity,540.88],"opacity":0,"fade":50},{"opacity":100,"in":[540.88,540.88]},{"in":[540.88,Infinity],"opacity":100,"fade":50}]);/* scroll effect */
-$('#u55342').registerOpacityScrollEffect([{"in":[-Infinity,267.04],"opacity":0,"fade":50},{"opacity":100,"in":[267.04,267.04]},{"in":[267.04,Infinity],"opacity":100,"fade":50}]);/* scroll effect */
-$('#u55358').registerOpacityScrollEffect([{"in":[-Infinity,882.5],"opacity":0,"fade":50},{"opacity":100,"in":[882.5,882.5]},{"in":[882.5,Infinity],"opacity":100,"fade":50}]);/* scroll effect */
-$('#u55465').registerOpacityScrollEffect([{"in":[-Infinity,2388.55],"opacity":0,"fade":50},{"opacity":100,"in":[2388.55,2388.55]},{"in":[2388.55,Infinity],"opacity":100,"fade":50}]);/* scroll effect */
-$('#u55481').registerOpacityScrollEffect([{"in":[-Infinity,1863.61],"opacity":0,"fade":50},{"opacity":100,"in":[1863.61,1863.61]},{"in":[1863.61,Infinity],"opacity":100,"fade":50}]);/* scroll effect */
-$('#u55474').registerOpacityScrollEffect([{"in":[-Infinity,2297.57],"opacity":0,"fade":50},{"opacity":100,"in":[2297.57,2297.57]},{"in":[2297.57,Infinity],"opacity":100,"fade":50}]);/* scroll effect */
-$('#u56777').registerOpacityScrollEffect([{"in":[-Infinity,2699.57],"opacity":0,"fade":50},{"opacity":100,"in":[2699.57,2699.57]},{"in":[2699.57,Infinity],"opacity":100,"fade":50}]);/* scroll effect */
-$('#u55528').registerOpacityScrollEffect([{"in":[-Infinity,1257.03],"opacity":0,"fade":50},{"opacity":100,"in":[1257.03,1257.03]},{"in":[1257.03,Infinity],"opacity":100,"fade":50}]);/* scroll effect */
-$('#u56849').registerOpacityScrollEffect([{"in":[-Infinity,3531.1],"opacity":0,"fade":50},{"opacity":100,"in":[3531.1,3531.1]},{"in":[3531.1,Infinity],"opacity":100,"fade":50}]);/* scroll effect */
-$('#u56856').registerOpacityScrollEffect([{"in":[-Infinity,3928.39],"opacity":0,"fade":50},{"opacity":100,"in":[3928.39,3928.39]},{"in":[3928.39,Infinity],"opacity":100,"fade":50}]);/* scroll effect */
-$('#u56883').registerOpacityScrollEffect([{"in":[-Infinity,4875.31],"opacity":0,"fade":50},{"opacity":100,"in":[4875.31,4875.31]},{"in":[4875.31,Infinity],"opacity":100,"fade":50}]);/* scroll effect */
-$('#u56910').registerOpacityScrollEffect([{"in":[-Infinity,4632.19],"opacity":0,"fade":50},{"opacity":100,"in":[4632.19,4632.19]},{"in":[4632.19,Infinity],"opacity":100,"fade":50}]);/* scroll effect */
-$('#u56937').registerOpacityScrollEffect([{"in":[-Infinity,3106.1],"opacity":0,"fade":50},{"opacity":100,"in":[3106.1,3106.1]},{"in":[3106.1,Infinity],"opacity":100,"fade":50}]);/* scroll effect */
-$('#u56946').registerOpacityScrollEffect([{"in":[-Infinity,4322.8],"opacity":0,"fade":50},{"opacity":100,"in":[4322.8,4322.8]},{"in":[4322.8,Infinity],"opacity":100,"fade":50}]);/* scroll effect */
-$('#u56953').registerOpacityScrollEffect([{"in":[-Infinity,5355.46],"opacity":0,"fade":50},{"opacity":100,"in":[5355.46,5355.46]},{"in":[5355.46,Infinity],"opacity":100,"fade":50}]);/* scroll effect */
-$('#u56982').registerOpacityScrollEffect([{"in":[-Infinity,5595.37],"opacity":0,"fade":50},{"opacity":100,"in":[5595.37,5595.37]},{"in":[5595.37,Infinity],"opacity":100,"fade":50}]);/* scroll effect */
-$('#u55090').registerOpacityScrollEffect([{"in":[-Infinity,6334.35],"opacity":0,"fade":50},{"opacity":100,"in":[6334.35,6334.35]},{"in":[6334.35,Infinity],"opacity":100,"fade":50}]);/* scroll effect */
+$('#u55291').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,-100.04],"opacity":0},{"opacity":100,"in":[-100.04,-100.04]},{"fade":50,"in":[-100.04,Infinity],"opacity":100}]);/* scroll effect */
+$('#u55320').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,115.4],"opacity":0},{"opacity":100,"in":[115.4,115.4]},{"fade":50,"in":[115.4,Infinity],"opacity":100}]);/* scroll effect */
+$('#u55031-4').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,-5.09],"opacity":0},{"opacity":100,"in":[-5.09,-5.09]},{"fade":50,"in":[-5.09,Infinity],"opacity":100}]);/* scroll effect */
+$('#u55034-4').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,104.91],"opacity":0},{"opacity":100,"in":[104.91,104.91]},{"fade":50,"in":[104.91,Infinity],"opacity":100}]);/* scroll effect */
+$('#u55037-4').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,384.91],"opacity":0},{"opacity":100,"in":[384.91,384.91]},{"fade":50,"in":[384.91,Infinity],"opacity":100}]);/* scroll effect */
+$('#u55040-6').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,670.91],"opacity":0},{"opacity":100,"in":[670.91,670.91]},{"fade":50,"in":[670.91,Infinity],"opacity":100}]);/* scroll effect */
+$('#u55043-4').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,1009.91],"opacity":0},{"opacity":100,"in":[1009.91,1009.91]},{"fade":50,"in":[1009.91,Infinity],"opacity":100}]);/* scroll effect */
+$('#u55046-6').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,1382.91],"opacity":0},{"opacity":100,"in":[1382.91,1382.91]},{"fade":50,"in":[1382.91,Infinity],"opacity":100}]);/* scroll effect */
+$('#u55049-4').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,1670.81],"opacity":0},{"opacity":100,"in":[1670.81,1670.81]},{"fade":50,"in":[1670.81,Infinity],"opacity":100}]);/* scroll effect */
+$('#u55052-8').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,1994.71],"opacity":0},{"opacity":100,"in":[1994.71,1994.71]},{"fade":50,"in":[1994.71,Infinity],"opacity":100}]);/* scroll effect */
+$('#u55055-4').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,2488.56],"opacity":0},{"opacity":100,"in":[2488.56,2488.56]},{"fade":50,"in":[2488.56,Infinity],"opacity":100}]);/* scroll effect */
+$('#u55058-10').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,2817.96],"opacity":0},{"opacity":100,"in":[2817.96,2817.96]},{"fade":50,"in":[2817.96,Infinity],"opacity":100}]);/* scroll effect */
+$('#u55072-4').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,3655.26],"opacity":0},{"opacity":100,"in":[3655.26,3655.26]},{"fade":50,"in":[3655.26,Infinity],"opacity":100}]);/* scroll effect */
+$('#u55075-4').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,4048.86],"opacity":0},{"opacity":100,"in":[4048.86,4048.86]},{"fade":50,"in":[4048.86,Infinity],"opacity":100}]);/* scroll effect */
+$('#u55078-6').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,4490.86],"opacity":0},{"opacity":100,"in":[4490.86,4490.86]},{"fade":50,"in":[4490.86,Infinity],"opacity":100}]);/* scroll effect */
+$('#u55081-4').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,4768.86],"opacity":0},{"opacity":100,"in":[4768.86,4768.86]},{"fade":50,"in":[4768.86,Infinity],"opacity":100}]);/* scroll effect */
+$('#u55084-6').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,5037.81],"opacity":0},{"opacity":100,"in":[5037.81,5037.81]},{"fade":50,"in":[5037.81,Infinity],"opacity":100}]);/* scroll effect */
+$('#u55087-4').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,5761.41],"opacity":0},{"opacity":100,"in":[5761.41,5761.41]},{"fade":50,"in":[5761.41,Infinity],"opacity":100}]);/* scroll effect */
+$('#u55093-4').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,5436.46],"opacity":0},{"opacity":100,"in":[5436.46,5436.46]},{"fade":50,"in":[5436.46,Infinity],"opacity":100}]);/* scroll effect */
+$('#u56823').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,3241.15],"opacity":0},{"opacity":100,"in":[3241.15,3241.15]},{"fade":50,"in":[3241.15,Infinity],"opacity":100}]);/* scroll effect */
+$('#u55139').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,3241.1],"opacity":0},{"opacity":100,"in":[3241.1,3241.1]},{"fade":50,"in":[3241.1,Infinity],"opacity":100}]);/* scroll effect */
+$('#u55262').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,1547.5],"opacity":0},{"opacity":100,"in":[1547.5,1547.5]},{"fade":50,"in":[1547.5,Infinity],"opacity":100}]);/* scroll effect */
+$('#u55333').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,540.88],"opacity":0},{"opacity":100,"in":[540.88,540.88]},{"fade":50,"in":[540.88,Infinity],"opacity":100}]);/* scroll effect */
+$('#u55342').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,267.04],"opacity":0},{"opacity":100,"in":[267.04,267.04]},{"fade":50,"in":[267.04,Infinity],"opacity":100}]);/* scroll effect */
+$('#u55358').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,882.5],"opacity":0},{"opacity":100,"in":[882.5,882.5]},{"fade":50,"in":[882.5,Infinity],"opacity":100}]);/* scroll effect */
+$('#u55465').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,2388.55],"opacity":0},{"opacity":100,"in":[2388.55,2388.55]},{"fade":50,"in":[2388.55,Infinity],"opacity":100}]);/* scroll effect */
+$('#u55481').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,1863.61],"opacity":0},{"opacity":100,"in":[1863.61,1863.61]},{"fade":50,"in":[1863.61,Infinity],"opacity":100}]);/* scroll effect */
+$('#u55474').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,2297.57],"opacity":0},{"opacity":100,"in":[2297.57,2297.57]},{"fade":50,"in":[2297.57,Infinity],"opacity":100}]);/* scroll effect */
+$('#u56777').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,2699.57],"opacity":0},{"opacity":100,"in":[2699.57,2699.57]},{"fade":50,"in":[2699.57,Infinity],"opacity":100}]);/* scroll effect */
+$('#u55528').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,1257.03],"opacity":0},{"opacity":100,"in":[1257.03,1257.03]},{"fade":50,"in":[1257.03,Infinity],"opacity":100}]);/* scroll effect */
+$('#u56849').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,3531.1],"opacity":0},{"opacity":100,"in":[3531.1,3531.1]},{"fade":50,"in":[3531.1,Infinity],"opacity":100}]);/* scroll effect */
+$('#u56856').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,3928.39],"opacity":0},{"opacity":100,"in":[3928.39,3928.39]},{"fade":50,"in":[3928.39,Infinity],"opacity":100}]);/* scroll effect */
+$('#u56883').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,4875.31],"opacity":0},{"opacity":100,"in":[4875.31,4875.31]},{"fade":50,"in":[4875.31,Infinity],"opacity":100}]);/* scroll effect */
+$('#u56910').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,4632.19],"opacity":0},{"opacity":100,"in":[4632.19,4632.19]},{"fade":50,"in":[4632.19,Infinity],"opacity":100}]);/* scroll effect */
+$('#u56937').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,3106.1],"opacity":0},{"opacity":100,"in":[3106.1,3106.1]},{"fade":50,"in":[3106.1,Infinity],"opacity":100}]);/* scroll effect */
+$('#u56946').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,4322.8],"opacity":0},{"opacity":100,"in":[4322.8,4322.8]},{"fade":50,"in":[4322.8,Infinity],"opacity":100}]);/* scroll effect */
+$('#u56953').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,5355.46],"opacity":0},{"opacity":100,"in":[5355.46,5355.46]},{"fade":50,"in":[5355.46,Infinity],"opacity":100}]);/* scroll effect */
+$('#u56982').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,5595.37],"opacity":0},{"opacity":100,"in":[5595.37,5595.37]},{"fade":50,"in":[5595.37,Infinity],"opacity":100}]);/* scroll effect */
+$('#u55090').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,6334.35],"opacity":0},{"opacity":100,"in":[6334.35,6334.35]},{"fade":50,"in":[6334.35,Infinity],"opacity":100}]);/* scroll effect */
 $('.html').registerBackgroundPositionScrollEffect([{"speed":[0,-0.2],"in":[-Infinity,0]},{"speed":[-0.1,0],"in":[0,Infinity]}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
