--- a/we.html
+++ b/we.html
@@ -16,7 +16,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>We</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=312001045"/>
-  <link rel="stylesheet" type="text/css" href="css/we.css?crc=384142598" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/we.css?crc=3898692613" id="pagesheet"/>
     <!--/*
 
 */
@@ -170,18 +170,18 @@ Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
-$('#u39160').registerOpacityScrollEffect([{"in":[-Infinity,182.3],"fade":50,"opacity":0},{"opacity":100,"in":[182.3,182.3]},{"in":[182.3,Infinity],"fade":50,"opacity":100}]);/* scroll effect */
-$('#u39110').registerOpacityScrollEffect([{"in":[-Infinity,552.1],"fade":50,"opacity":0},{"opacity":100,"in":[552.1,552.1]},{"in":[552.1,Infinity],"fade":50,"opacity":100}]);/* scroll effect */
-$('#u39125').registerOpacityScrollEffect([{"in":[-Infinity,829.65],"fade":50,"opacity":0},{"opacity":100,"in":[829.65,829.65]},{"in":[829.65,Infinity],"fade":50,"opacity":100}]);/* scroll effect */
-$('#u39132').registerOpacityScrollEffect([{"in":[-Infinity,1221.65],"fade":50,"opacity":0},{"opacity":100,"in":[1221.65,1221.65]},{"in":[1221.65,Infinity],"fade":50,"opacity":100}]);/* scroll effect */
-$('#u39153').registerOpacityScrollEffect([{"in":[-Infinity,1948.6],"fade":50,"opacity":0},{"opacity":100,"in":[1948.6,1948.6]},{"in":[1948.6,Infinity],"fade":50,"opacity":100}]);/* scroll effect */
-$('#u39167').registerOpacityScrollEffect([{"in":[-Infinity,2663.25],"fade":50,"opacity":0},{"opacity":100,"in":[2663.25,2663.25]},{"in":[2663.25,Infinity],"fade":50,"opacity":100}]);/* scroll effect */
-$('#u39181').registerOpacityScrollEffect([{"in":[-Infinity,3032.4],"fade":50,"opacity":0},{"opacity":100,"in":[3032.4,3032.4]},{"in":[3032.4,Infinity],"fade":50,"opacity":100}]);/* scroll effect */
-$('#u39250').registerOpacityScrollEffect([{"in":[-Infinity,1560.7],"fade":50,"opacity":0},{"opacity":100,"in":[1560.7,1560.7]},{"in":[1560.7,Infinity],"fade":50,"opacity":100}]);/* scroll effect */
-$('#u39258').registerOpacityScrollEffect([{"in":[-Infinity,2279.4],"fade":50,"opacity":0},{"opacity":100,"in":[2279.4,2279.4]},{"in":[2279.4,Infinity],"fade":50,"opacity":100}]);/* scroll effect */
-$('#u39188').registerOpacityScrollEffect([{"in":[-Infinity,3424.45],"fade":50,"opacity":0},{"opacity":100,"in":[3424.45,3424.45]},{"in":[3424.45,Infinity],"fade":50,"opacity":100}]);/* scroll effect */
-$('#u39195').registerOpacityScrollEffect([{"in":[-Infinity,3755.95],"fade":50,"opacity":0},{"opacity":100,"in":[3755.95,3755.95]},{"in":[3755.95,Infinity],"fade":50,"opacity":100}]);/* scroll effect */
-$('#u39202').registerOpacityScrollEffect([{"in":[-Infinity,4129.15],"fade":50,"opacity":0},{"opacity":100,"in":[4129.15,4129.15]},{"in":[4129.15,Infinity],"fade":50,"opacity":100}]);/* scroll effect */
+$('#u39160').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,182.3],"opacity":0},{"opacity":100,"in":[182.3,182.3]},{"fade":50,"in":[182.3,Infinity],"opacity":100}]);/* scroll effect */
+$('#u39110').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,552.1],"opacity":0},{"opacity":100,"in":[552.1,552.1]},{"fade":50,"in":[552.1,Infinity],"opacity":100}]);/* scroll effect */
+$('#u39125').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,829.65],"opacity":0},{"opacity":100,"in":[829.65,829.65]},{"fade":50,"in":[829.65,Infinity],"opacity":100}]);/* scroll effect */
+$('#u39132').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,1221.65],"opacity":0},{"opacity":100,"in":[1221.65,1221.65]},{"fade":50,"in":[1221.65,Infinity],"opacity":100}]);/* scroll effect */
+$('#u39153').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,1948.6],"opacity":0},{"opacity":100,"in":[1948.6,1948.6]},{"fade":50,"in":[1948.6,Infinity],"opacity":100}]);/* scroll effect */
+$('#u39167').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,2663.25],"opacity":0},{"opacity":100,"in":[2663.25,2663.25]},{"fade":50,"in":[2663.25,Infinity],"opacity":100}]);/* scroll effect */
+$('#u39181').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,3032.4],"opacity":0},{"opacity":100,"in":[3032.4,3032.4]},{"fade":50,"in":[3032.4,Infinity],"opacity":100}]);/* scroll effect */
+$('#u39250').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,1560.7],"opacity":0},{"opacity":100,"in":[1560.7,1560.7]},{"fade":50,"in":[1560.7,Infinity],"opacity":100}]);/* scroll effect */
+$('#u39258').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,2279.4],"opacity":0},{"opacity":100,"in":[2279.4,2279.4]},{"fade":50,"in":[2279.4,Infinity],"opacity":100}]);/* scroll effect */
+$('#u39188').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,3424.45],"opacity":0},{"opacity":100,"in":[3424.45,3424.45]},{"fade":50,"in":[3424.45,Infinity],"opacity":100}]);/* scroll effect */
+$('#u39195').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,3755.95],"opacity":0},{"opacity":100,"in":[3755.95,3755.95]},{"fade":50,"in":[3755.95,Infinity],"opacity":100}]);/* scroll effect */
+$('#u39202').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,4129.15],"opacity":0},{"opacity":100,"in":[4129.15,4129.15]},{"fade":50,"in":[4129.15,Infinity],"opacity":100}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
