--- a/adjuy-2.html
+++ b/adjuy-2.html
@@ -10,13 +10,13 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "jquery.scrolleffects.js", "require.js", "adjuy-2.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "jquery.scrolleffects.js", "adjuy-2.css"], "outOfDate":[]};
 </script>
   
   <title>Adjuy 2</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4153534752"/>
-  <link rel="stylesheet" type="text/css" href="css/adjuy-2.css?crc=3771789677" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=312001045"/>
+  <link rel="stylesheet" type="text/css" href="css/adjuy-2.css?crc=216892768" id="pagesheet"/>
     <!--/*
 
 */
